# morse

./: .astylerc  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  author.json  boost.env  flake.nix  init-boost.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: nhiy07c10kg1i1h8g4cj4i55biv4hvnh-source
docs/: doxygen.md  index.html
include/morse/: mapping.hpp  morseCodec.hpp
include/pets/: cat.hpp
libs/boost/: install.md
src/: main.cpp  main.cpp.bak
src/morse/: morseCodec.cpp
src/pets/: cat.cpp
